pcrs/resources/less/new-visualizer.less
@thick-border-color: #DDDDDD;
@address-width: 30%;
@values-width: 70%;
@cell-width: 17.5%;

hr {
    width: 100%;
}

.title {
    font-size: 20px;
    font-weight: bold;
    text-align: center;
}

.visualizer-section {
    margin: 5px;
    padding: 10px;
    vertical-align: top;
    display: inline-block;
    overflow-y: auto;
    max-height: 800px;
}

.code-window-section {
    .visualizer-section;
    width: 50%;
    min-width: 55em;
}

#preview-code {
    max-height: 600px;
    overflow: auto;
}

.name-type-section {
    .visualizer-section;
    min-width: 25em;
    width: 23%;
}

.memory-map-section {
    .visualizer-section;
    min-width: 25em;
    width: 23%;
}

.visualizer-section-heading {
    padding-left: 5px;
    padding-right: 5px;
    text-align: center;
}

.memory-map-table {
    position: relative !important;
    width: 100%;
    float: left;
}

.address-heading {
    text-align: right;
    border-right: 2px solid @thick-border-color;
    width: @address-width;
}

.values-heading {
    text-align: center;
    width: @values-width;
}

.memory-map-address {
    text-align: right;
    border-right: 2px solid @thick-border-color !important;
    width: @address-width;
}

.memory-map-cell {
    text-align: center;
    vertical-align: middle !important;
    width: @cell-width;
}

.clear-memory-map-cell {
    .memory-map-cell;
    border-left: none !important;
    border-right: none !important;
}

.right-edge-clear-cell {
    .memory-map-cell;
    border-left: none !important;
}

.top-row-clear-cell {
    border-bottom: none !important;
}

.middle-row-clear-cell {
    border-top: none !important;
    border-bottom: none !important;
}

.bottom-row-clear-cell {
    border-top: none !important;
}

.memory-break-line {
    text-align: center;
}

.memory-break-line-addr {
    .memory-break-line;
    border-right: 2px solid @thick-border-color !important;
}

.cell-label-td {
    position: absolute !important;
    padding: 0px !important;
    border: none !important;
    // Need to also set height, width and max-width
    // Height should be a multiple of a cell height (default 37px)
    // Width and max-width should be the same and should be multiples of a cell width (default @cell-width)
}

.cell-label-div {
    display: table-cell !important;
    text-align: center;
    vertical-align: middle;
    width: 10000px;
    // This div should always be wrapped in a td.cell-label-td
    // Need to also set height
    // Height should be the same as the height of the wrapping td.cell-label-td
}

